--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "recordrtc": "^5.6.1",
+    "threads": "^1.6.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -30,6 +31,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "threads-plugin": "^1.4.0",
     "typescript": "~3.9.3"
   }
 }
