--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "recordrtc": "^5.6.1",
-    "threads": "^1.6.4",
+    "core-js": "^3.15.2",
+    "recordrtc": "^5.6.2",
+    "threads": "^1.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@types/dom-mediacapture-record": "^1.0.7",
-    "@types/recordrtc": "^5.6.4",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "@types/dom-mediacapture-record": "^1.0.9",
+    "@types/recordrtc": "^5.6.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-typescript": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
+    "@vue/compiler-sfc": "^3.1.4",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^7.30.0",
+    "eslint-plugin-vue": "^7.12.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^10",
     "threads-plugin": "^1.4.0",
-    "typescript": "~3.9.3"
+    "typescript": "~4.3.5"
   }
 }
