--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.15.2",
-    "pinia": "^2.0.0-beta.5",
+    "pinia": "^2.0.28",
     "recordrtc": "^5.6.2",
-    "threads": "^1.6.5",
-    "vue": "^3.0.0",
+    "srt-parser-2": "^1.2.1",
+    "threads": "^1.7.0",
+    "vue": "^3.2.45",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.9",
     "@types/recordrtc": "^5.6.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-plugin-typescript": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "@vue/compiler-sfc": "^3.1.4",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.30.0",
-    "eslint-plugin-vue": "^7.12.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.30.0",
+    "eslint-plugin-vue": "^9.8.0",
     "sass": "^1.35.1",
     "sass-loader": "^10",
     "threads-plugin": "^1.4.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.9.4"
   }
 }
